--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,6 +7,29 @@
 </head>
 <body>
     <h1>Biryai</h1>
-    
+    <img src="" alt="">
+
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente nobis et.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga saepe doloremque eum magnam consectetur asperiores nemo aperiam optio omnis? Quae atque aliquid ipsum modi quod id laboriosam facere aliquam minima.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>chicken</li>
+        <li>spices</li>
+        <li>rice</li>
+        <li>water</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>fire on</li>
+        <li>chicken boiled</li>
+        <li>blah blah </li>
+        <li>keep blah blah</li>
+    </ol>
+
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
