--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Biryai</h1>
-    <img src="" alt="">
+    <img src="../image/biryani.png" alt="A table full of biryani servings." width="600">
 
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente nobis et.</p>
