--- a/recipes/mince-meat.html
+++ b/recipes/mince-meat.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Mine Meat with Bread</h1>
-    <img src="" alt="">
+    <img src="../image/minced-meat.jpg" alt="mince-meat with bread on diner table." height="600">
 
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente nobis et.</p>
