--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Ramen</h1>
-    <img src="" alt="">
+    <img src="../image/ramen.jpg" alt="Ramen with extra sause." height="600
+    ">
 
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente nobis et.</p>
