Add link to homepage

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramen</title>
 </head>
+
 <body>
     <h1>Ramen</h1>
     <img src="../image/ramen.jpg" alt="Ramen with extra sause." height="600
     ">
 
     <h2>Description</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente nobis et.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga saepe doloremque eum magnam consectetur asperiores nemo aperiam optio omnis? Quae atque aliquid ipsum modi quod id laboriosam facere aliquam minima.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facilis possimus nobis sed obcaecati repudiandae
+        voluptatum corporis, non expedita. Minus pariatur aut obcaecati voluptate consequuntur tempore esse sapiente
+        nobis et.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga saepe doloremque eum magnam consectetur asperiores
+        nemo aperiam optio omnis? Quae atque aliquid ipsum modi quod id laboriosam facere aliquam minima.</p>
 
     <h3>Ingredients</h3>
     <ul>
@@ -32,4 +37,5 @@
 
     <a href="../index.html">Home</a>
 </body>
+
 </html>
