--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+   
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: #afeeee80;
+        }
+        h1 {
+            color: #2f4f4f;
+            padding: 15px 0;
+            text-align: center;
+            font-size: 39px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        ul {
+            margin-top: 10px;
+            font-size: 27px;
+            line-height: 1.8;
+            text-align: center;
+            list-style: none;
+            font-weight: bolder;
+
+        }
+        ul a {
+            text-decoration: none;
+            color: #333333;
+        }
+
+        a:hover {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Odin Recipes</h1>
