Linking recipes to external css

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biryani</title>
+
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <h1>Biryai</h1>
+    <h1>Biryani</h1>
     <img src="../image/biryani.png" alt="A table full of biryani servings." width="600">
 
     <h2>Description</h2>
