--- a/recipes/mince-meat.html
+++ b/recipes/mince-meat.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mince Meat</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mine Meat with Bread</h1>
